--- a/style.css
+++ b/style.css
@@ -32,7 +32,7 @@
 }
 
 .footer{
-    background-color: darkgray;
+    background-color: rgb(49, 49, 49);
     height: 150px;
     top: 0;
     left: 0;
